@@ -1,3 +1,8 @@
+Mon Feb 22 23:38:17 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* xappy/mset_search_results.py: Support both the old and new xapian
+	  APIs for getting facet values.
+
 Mon Feb 22 23:14:54 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* libs/get_xapian.py: Update to latest versions of xapian (now
